brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/Slack_Email_Notification_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>Stores environment-specific Slack channel IDs and email sender or recipient addresses used by Salesforce Flows and other custom implementations.

It is mandatory to use meaningful Labels, API Names, Descriptions, and Help Text for each field to ensure administrators and developers can easily understand the purpose and context of the Slack channel IDs and email addresses maintained in this metadata.</description>
    <label>Slack &amp; Email Notification Metadata</label>
    <pluralLabel>Slack_Email_Notification_Metadata</pluralLabel>
</CustomObject>