brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>