brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>The 15 or 18 character Salesforce Organization Id of the environment this record belongs to. The flow matches on this instead of DeveloperName, so environment detection is automatic and works in async context.</description>
    <inlineHelpText>Paste this org&apos;s Organization Id (Setup - Company Information). Used to auto-detect the environment.</inlineHelpText>
    <label>Org Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>