brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Reminder_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Channel_Id__c</fullName>
    <description>Slack channel ID where final-round follow-up reminders are posted for this environment.</description>
    <inlineHelpText>Paste the Slack channel ID (starts with C). The Salesforce app must be invited to that channel.</inlineHelpText>
    <label>slack_channel_followup_reminders</label>
    <length>50</length>
    <type>Text</type>
</CustomField>