brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>