brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Slack_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_App_Id__c</fullName>
    <label>Slack App Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>