brain/sources/prod-metadata/objects/Slack_Email_Notification_Metadata__mdt/fields/Support_Reminder_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Support_Reminder_Channel_Id__c</fullName>
    <label>Support Reminder Channel Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>